--- a/css/header.css
+++ b/css/header.css
@@ -69,9 +69,13 @@ body {
 }
 
 .logo {
-    transform: translateX(-3%);
+    
     cursor: pointer;
     width:21rem;
+}
+
+.header__logo {
+    transform: translateX(-3%);
 }
 
 .menu {
@@ -104,7 +108,7 @@ body {
     border: none;
     border-radius: 1rem;
     color: #fff;
-    margin: 1.5rem;
+    margin: 0 1.5rem;
     text-transform: uppercase;
     height: 4.5rem;
     width: 17.5rem;
@@ -157,5 +161,40 @@ body {
 @media (max-width: 1024px) {
     .social__link {
         margin-left: 2rem;
+    }
+}
+
+@media (max-width: 850px) {
+    .menu,
+    .phones__row,
+    .phones__number {
+        display: none;
+    }
+
+    
+}
+
+@media (max-width: 600px) {
+    .logo {
+        width: 16rem;
+    }
+    
+    .header__social {
+        position: absolute;
+        bottom: 3rem;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .button {
+        margin: 0 1rem;
+        width: 10rem;
+    }
+}
+
+@media (max-width: 470px) {
+    .button {
+        font-size: 1.3rem;
+        height: 3rem;
     }
 }
