--- a/css/header.css
+++ b/css/header.css
@@ -28,6 +28,25 @@ body {
 .header__city,
 .email {
     cursor: pointer;
+    position: relative;
+}
+
+.header__city:hover {
+    text-decoration: underline;
+}
+
+
+.arrow {
+    border: 0.7rem solid transparent;
+    cursor: pointer;
+    width: 0;
+}
+
+.city__arrow {
+    border-top: 1rem solid #fff;
+    position: absolute;
+    left: 15rem;
+    top: .5rem;
 }
 
 .header__top-righ {
@@ -108,7 +127,7 @@ body {
     border: none;
     border-radius: 1rem;
     color: #fff;
-    
+    cursor: pointer;
     text-transform: uppercase;
     height: 4.5rem;
     width: 17.5rem;
