--- a/css/section-ofer.css
+++ b/css/section-ofer.css
@@ -1,7 +1,6 @@
 .section-ofer {
   background: url("../img/para.jpg") no-repeat;
   width: 100%;
-  height: 800px;
 }
 
 .section-ofer__block-wrapper {
@@ -96,6 +95,7 @@
 @media (max-width: 850px) {
   .section-ofer{
     background-position-x: 20%;
+    height: 83rem;
   }
 }
 
