cloned img to build

--- a/css/section-order.css
+++ b/css/section-order.css
@@ -1,6 +1,6 @@
 .section-order {
   background: rgb(156, 148, 146)  top right no-repeat;
-  background-image: url("../img/sofa.jpg");
+  background-image: url(../img/div.jpg);
   background-size: cover;
   width: 100%;
   height: 800px;
